Animaciones aplicadas en index y nosotros

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -31,7 +31,7 @@
     
     <article class="nosotros" id="nosotros">
         <div style="width:480px"><iframe allow="fullscreen" frameBorder="0" height="270" src="https://giphy.com/embed/XyKmxzV6HaLXc9vZ3J/video" width="480"></iframe></div>            
-        <h3>SAITAMA BAR es un lugar moderno y tranquilo, donde podrás disfrutar los mejores tragos. Desde las 8h am, y hasta bien entrada la noche, dispondrás de un ambiente tranquilo y agradable, donde podrás leer la prensa diaria, reunirte con tus amistades, disfrutar de nuestros tragos o nuestras cervezas de importación, y dónde siempre tendrás algo para comer.Durante todo el año podrás disfrutar en nuestro local de exposiciones mensuales de pintura. Además, disponemos de conexión WiFi para nuestros clientes, así como de un local perfectamente climatizado para disfrutar con mayor confort nuestras instalaciones.</h3>
+        <h3 class="presentacion">SAITAMA BAR es un lugar moderno y tranquilo, donde podrás disfrutar los mejores tragos. Desde las 8h am, y hasta bien entrada la noche, dispondrás de un ambiente tranquilo y agradable, donde podrás leer la prensa diaria, reunirte con tus amistades, disfrutar de nuestros tragos o nuestras cervezas de importación, y dónde siempre tendrás algo para comer.Durante todo el año podrás disfrutar en nuestro local de exposiciones mensuales de pintura. Además, disponemos de conexión WiFi para nuestros clientes, así como de un local perfectamente climatizado para disfrutar con mayor confort nuestras instalaciones.</h3>
     </article>
 
     <section>
