--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <header class="container" id="header">
+    <header class="container-fluid s-0 e-0" id="header">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
                 <a class="col-2 navbar-brand" href="./index.html">
