--- a/pages/nuestros-tragos.html
+++ b/pages/nuestros-tragos.html
@@ -1,32 +1,41 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Saitama</title>
-        <!-- Bootstrap -->
-        <link rel="stylesheet" href="../css/bootstrap.min.css">
-        <!--    CSS    -->
-        <link rel="stylesheet" href="../css/styles.css">
-        <script src="../js/bootstrap.bundle.min.js"></script>
-      
-        <!-- fontawesome iconos -->
-        <script src="https://kit.fontawesome.com/1f1377765f.js" crossorigin="anonymous"></script>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Saitama</title>
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <!--    CSS    -->
+    
+    <script src="../js/bootstrap.bundle.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  
+    <!-- fontawesome iconos -->
+    <script src="https://kit.fontawesome.com/1f1377765f.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>  
+  
+    <link rel="stylesheet" href="../css/styles.css">
+</head>
 
 <body>
     <header class="container-fluid s-0 e-0" id="header">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
                 <a class="col-2 navbar-brand" href="../index.html">
-                    <img id="brand" src="../imagenes/loguito.png" height="100px" width="100px" alt="">
+                    <img id="brand" src="../imagenes/loguito.png" height="100px" width="100px" alt="Inicio">
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="row collapse navbar-collapse" id="navbar">
                     <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" id="inicio-navbar" href="../index.html">Inicio</a>
+                        </li>
                         <li class="col-3 nav-item">
                             <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
                         </li>
