Arregladas algunas dimensiones responsive

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     
 
     <main>
-        <article>
+        <article class="main_article">
             <div id="left"> <!-- Cuerpo principal del index -->
                 <h1 class="bienvenidos">BIENVENIDOS A SAITAMA BAR</h1>
                 <img class="cocina" src="./imagenes/cocina.jpeg" alt="">
