--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -108,9 +108,22 @@
         </div>
     </section>
 
-    <footer>
-        <h5>Santiama Inc - Todos los derechos reservados</h5>
-        <img class="cara" src="../imagenes/logo-footer.png" alt="">
+    <footer class="row m-0 p-0">
+        <h5 class="col-4 derechos">Saitama Inc - Todos los derechos reservados</h5>
+        <div class="col-5">
+            <ul class="sitemap">
+                <li>
+                </li><a class="sitemap__item" href="../index.html">Página principal</a>
+                <li>
+                </li><a class="sitemap__item" href="../pages/nosotros.html">Sobre nosotros</a>
+                <li>
+                </li><a class="sitemap__item" href="../pages/nuestros-tragos.html">Carta de tragos</a>
+                <li>
+                </li><a class="sitemap__item" href="../pages/contacto.html">Contacto  y reservas</a>
+                <li>
+                </li><a class="sitemap__item" href="../pages/donde-encontrarnos.html">Dónde encontrarnos</a></ul>       
+        </div>
+        <img class="col-3 cara" src="../imagenes/logo-footer.png" alt="cara" height="80px" width="80px">
     </footer>
 
 </body>
