mixin en contacto

--- a/pages/nuestros-tragos.html
+++ b/pages/nuestros-tragos.html
@@ -134,15 +134,15 @@
         <div class="col-5">
             <ul class="sitemap">
                 <li>
-                </li><a class="sitemap__item" href="../index.html">Página principal</a>
+                </li><a class="sitemap__item principal" href="../index.html">Página principal</a>
                 <li>
-                </li><a class="sitemap__item" href="../pages/nosotros.html">Sobre nosotros</a>
+                </li><a class="sitemap__item aboutus" href="../pages/nosotros.html">Sobre nosotros</a>
                 <li>
-                </li><a class="sitemap__item" href="../pages/nuestros-tragos.html">Carta de tragos</a>
+                </li><a class="sitemap__item drinks" href="../pages/nuestros-tragos.html">Carta de tragos</a>
                 <li>
-                </li><a class="sitemap__item" href="../pages/contacto.html">Contacto  y reservas</a>
+                </li><a class="sitemap__item reserves" href="../pages/contacto.html">Contacto  y reservas</a>
                 <li>
-                </li><a class="sitemap__item" href="../pages/donde-encontrarnos.html">Dónde encontrarnos</a></ul>       
+                </li><a class="sitemap__item location" href="../pages/donde-encontrarnos.html">Dónde encontrarnos</a></ul>       
         </div>
         <img class="col-3 cara" src="../imagenes/logo-footer.png" alt="cara" height="80px" width="80px">
     </footer>
