--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
                 <a class="col-2 navbar-brand" href="./index.html">
-                    <img id="brand" src="./imagenes/loguito.png" height="100px" width="100px" alt="Inicio">
+                    <img id="brand" src="./imagenes/loguito.png" height="100px" width="100px" alt="Logo de inicio">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -55,7 +55,7 @@
         <article class="main_article">
             <div id="left"> <!-- Cuerpo principal del index -->
                 <h1 class="bienvenidos">BIENVENIDOS A SAITAMA BAR</h1>
-                <img class="cocina" src="./imagenes/cocina.jpeg" alt="">
+                <img class="cocina" src="./imagenes/cocina.jpeg" alt="Saitama cocinando">
                 <h3 class="lugar">Un lugar para los amantes de los tragos</h3>
                 <img class="guante" src="./imagenes/guante.solido.png" alt="">
             </div>
