--- a/pages/donde-encontrarnos.html
+++ b/pages/donde-encontrarnos.html
@@ -62,7 +62,7 @@
             <iframe class="map" id="col-1 map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d86972.8848848466!2d139.66287817085365!3d35.80275190273747!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018eac00269ab67%3A0x289141adb4641a5d!2sBar!5e0!3m2!1ses-419!2sar!4v1648444915678!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <div class="row travel" id="jrpass">
-            <img class="col" id="train" src="../imagenes/train.png" alt="train">
+            <img class="col" id="train" src="../imagenes/train.png" alt="Tren viajando hacia Saitama">
         </div>  
     </article>
 
@@ -92,7 +92,7 @@
                 <li>
                 </li><a class="sitemap__item" href="../pages/donde-encontrarnos.html">Dónde encontrarnos</a></ul>       
         </div>
-        <img class="col-3 cara" src="../imagenes/logo-footer.png" alt="cara" height="80px" width="80px">
+        <img class="col-3 cara" src="../imagenes/logo-footer.png" alt="Cara de Saitama" height="80px" width="80px">
     </footer>
 
 </body>
