--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -58,7 +58,7 @@
             <iframe allow="fullscreen" frameBorder="0" height="270" src="https://giphy.com/embed/XyKmxzV6HaLXc9vZ3J/video" width="480"></iframe>
         </div>
         <span class="col">
-            <img class="mesas" src="../imagenes/interior-bar.jpeg" alt="" >
+            <img class="mesas" src="../imagenes/interior-bar.jpeg" alt="Barra de tragos y presentación del bar" >
         </span>
 
     </article>
