--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -54,9 +54,9 @@
 
     
     <article class="row nosotros" id="nosotros">
-        <div class="col-3" style="width:480px">
-            <iframe allow="fullscreen" frameBorder="0" height="270" src="https://giphy.com/embed/XyKmxzV6HaLXc9vZ3J/video" width="480"></iframe>
-        </div>
+        <!-- <div class="col-8 gif" style="width:480px">
+            <iframe class="gif__content" allow="fullscreen" frameBorder="0" src="https://giphy.com/embed/XyKmxzV6HaLXc9vZ3J/video"></iframe>
+        </div> -->
         <span class="col">
             <img class="mesas" src="../imagenes/interior-bar.jpeg" alt="Barra de tragos y presentación del bar" >
         </span>
